--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "mysql": "^2.14.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.14",
-    "typeorm": "^0.2.41",
+    "typeorm": "0.3.16",
     "uuid": "^11.0.4"
   }
 }
