--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.1.0",
   "main": "index.js",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" &amp;&amp; exit 1",
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
@@ -41,6 +40,7 @@
     "express-async-errors": "^3.1.1",
     "google-auth-library": "^7.11.0",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.3",
     "mysql": "^2.14.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.14",
