--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "nev-server",
   "version": "1.1.0",
-  "main": "index.js",
+  "main": "build/shared/http/server.js",
+  "type": "commonjs",
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" &amp;&amp; exit 1",
@@ -9,28 +10,32 @@
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
-    "start": "node build/shared/http/server.js",
+    "start": "node -r tsconfig-paths/register build/shared/http/server.js",
     "build": "tsc"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/register": "^7.25.9",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.6",
-    "@types/node": "^8.10.66",
+    "@types/node": "^22.10.5",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.2.0",
     "prettier": "^2.5.0",
-    "ts-node": "^3.3.0",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^1.1.8",
-    "tsconfig-paths": "^3.15.0",
-    "typescript": "^3.9.10"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.0",
     "cors": "^2.8.5",
@@ -40,7 +45,6 @@
     "express-async-errors": "^3.1.1",
     "google-auth-library": "^7.11.0",
     "jsonwebtoken": "^8.5.1",
-    "module-alias": "^2.2.3",
     "mysql": "^2.14.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.14",
