--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
+    "module": "CommonJS",
     "target": "ES2020",
-    "module": "commonjs",
     "outDir": "./build",
     "rootDir": "./src",
     "strict": true,
